web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: web-ig
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
 rules:
 - host: web.jetqin.io
   http:
     paths:
     - path: /web
       backend:
         serviceName: web
         servicePort: 31015
  # backend:
  #   serviceName: web
  #   servicePort: 80
